fix layout shift body

--- a/app/gallery/gallery.module.scss
+++ b/app/gallery/gallery.module.scss
@@ -11,7 +11,7 @@
     width: 100%;
     max-width: 1100px;
     // padding: 1em;
-    padding-top: 105px;
+    // padding-top: 105px;
 }
 
 .gallery-title-container {
