--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,6 +15,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  padding-top: 100px;
 
 }
 
